<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/TextViewClock"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/timer_default"
        android:textSize="36sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/textView_time"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/spinner"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:entries="@array/array_long_time" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_start"
        android:id="@+id/Button_start"
        android:onClick="ButtonClickStart"
        android:layout_gravity="center"
        android:textSize="36sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_stop"
        android:id="@+id/Button_stop"
        android:onClick="ButtonClickStop"
        android:layout_gravity="center"
        android:textSize="36sp" />
</LinearLayout>