<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_default"
        android:textSize="36sp"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/linearLayoutOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_interval"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/array_time"
            android:textSize="28sp"
            android:id="@+id/spinner_interval"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_start_with"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/array_time"
            android:textSize="28sp"
            android:id="@+id/spinner_start"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutOne">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:onClick="ClickButtonStart"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
            android:layout_gravity="center"
            android:textSize="36sp"
            android:onClick="ClickButtonStop"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:onClick="ClickButtonReset"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>